<resources>
    <string name="app_name">WorkWithUi</string>

    //Clinic fragment
    <string name="example_for_group">EXAMPLE</string>
    <string name="test_results">Test Results</string>
    <string name="my_health_records">My Health Records</string>
    <string name="my_appointments">My Appointments</string>
    <string name="my_medications">My Medications</string>
    <string name="my_medical_team">My Medical Team</string>
    <string name="messages">Messages</string>
    <string name="billing">Billing</string>
    <string name="documents_folder">Documents &amp; Notes</string>

    //MedicalRecords fragment
    <string name="medical_records">Medical Records</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_button_next">Next</string>
    <string name="please_upload">Please upload the file(s) in the section below:</string>
    <string name="do_you_have_a_copy">Do you have a copy of your previous medical\nrecords?
        <font color='red'>*</font>
    </string>
    <string name="example_for_child">EXAMPLE</string>

    //Profile layout
    <string name="icon_profile">iconProfile</string>
    <string name="icon_camera">iconCamera</string>
    <string name="membership_id">Membership ID: 01–99–033</string>
    <string name="number_mobile">+98 999 999 999</string>
    <string name="name_user_profile">Mrs Jane Doe</string>
    <string name="personal_details">Personal details</string>

    //Descriptions iv
    <string name="icon_settings">iconSettings</string>
    <string name="icon_health_records">iconHealthRecords</string>
    <string name="icon_calendar">iconCalendar</string>
    <string name="icon_medical_team">iconMedicalTeam</string>
    <string name="icon_message">iconMessage</string>
    <string name="icon_medications">iconMedications</string>
    <string name="icon_test_result">iconTestResult</string>
    <string name="icon_billing">iconBilling</string>
    <string name="icon_go_to_back">iconGoToBack</string>
    <string name="icon_cancel">iconCancel</string>
    <string name="icon_file">iconFile</string>
    <string name="icon_trash">iconTrash</string>
    <string name="icon_add">iconAdd</string>

    //Menu
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="education">Education</string>
    <string name="baan_info">BAAN info</string>
    <string name="profile">Profile</string>

    //Menu fragments
    <string name="baan_info_text">BAAN info</string>
    <string name="calendar_text">Calendar</string>
    <string name="education_text">Education</string>
    <string name="home_text">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_documents">iconDocuments</string>
</resources>