<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- TODO refactor titles of views -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0dp"
                android:background="@color/background_color">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar_profile"
                    app:layout_constraintTop_toTopOf="@id/constraint" />

                <include
                    android:id="@+id/profile"
                    layout="@layout/profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

                <GridLayout
                    android:id="@+id/gl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:alignmentMode="alignMargins"
                    android:columnCount="2"
                    android:columnOrderPreserved="false"
                    android:padding="@dimen/padding_14dp"
                    android:rowCount="4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/size_50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile">

                    <androidx.cardview.widget.CardView
                        style="@style/styleCardViewLeft"
                        android:layout_row="0">

                        <LinearLayout style="@style/linearForCard">

                            <ImageView
                                android:id="@+id/health_records"
                                android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:contentDescription="@string/icon_health_records"
                            android:src="@drawable/ic_medical_report" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/my_health_records" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewRight"
                    android:layout_row="0">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/calendar"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/icon_calendar"
                            android:src="@drawable/ic_calendar" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/my_appointments" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewRight"
                    android:layout_row="1">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/medical_team"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/icon_medical_team"
                            android:src="@drawable/ic_volunteering" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/my_medical_team" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewRight"
                    android:layout_row="2">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/message"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/icon_message"
                            android:src="@drawable/ic_chat" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/messages" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewLeft"
                    android:layout_row="1">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/medications"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:contentDescription="@string/icon_medications"
                            android:src="@drawable/ic_pill" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/my_medications" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewLeft"
                    android:layout_row="2">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/test_result"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:contentDescription="@string/icon_test_result"
                            android:src="@drawable/ic_test" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/test_results" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewLeft"
                    android:layout_row="3">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/documents"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:src="@drawable/ic_folder" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/documents_folder" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/styleCardViewRight"
                    android:layout_row="3">

                    <LinearLayout style="@style/linearForCard">

                        <ImageView
                            android:id="@+id/billing"
                            android:layout_width="@dimen/width_img"
                            android:layout_height="@dimen/height_img"
                            android:contentDescription="@string/icon_billing"
                            android:src="@drawable/ic_bill" />

                        <TextView
                            style="@style/textImage"
                            android:text="@string/billing" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                </GridLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>