<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl">

    <ImageView
        android:id="@+id/ivBackBaseTb"
        android:layout_width="@dimen/size_18dp"
        android:layout_height="@dimen/size_18dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_60dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_go_to_back" />

    <TextView
        android:id="@+id/tvMedicalRecords"
        style="@style/styleNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:gravity="center"
        android:text="@string/medical_records"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivCancelSettingsTb"
        app:layout_constraintStart_toEndOf="@+id/ivBackBaseTb"
        app:layout_constraintTop_toTopOf="@id/cl" />

    <ImageView
        android:id="@+id/ivCancelSettingsTb"
        android:layout_width="@dimen/size_15dp"
        android:layout_height="@dimen/size_15dp"
        android:layout_marginStart="@dimen/margin_60dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>