<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.ui.ConstantsKt" />
        <variable
            name="isClick"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSecondFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <include
            android:id="@id/tbSecondFragment"
            layout="@layout/toolbar_settings"
            app:layout_constraintTop_toTopOf="@id/clSecondFragment" />

        <com.example.ui.StepBar
            android:id="@+id/stepBar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbSecondFragment" />

        <TextView
            android:id="@+id/tvQuestion"
            style="@style/boldStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/do_you_have_a_copy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepBar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                android:text="@string/no"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_height="@dimen/size_43dp"
                app:layout_constraintStart_toStartOf="@+id/tvQuestion"
                app:layout_constraintTop_toBottomOf="@id/tvQuestion"
                app:question_no_button="@{isClick ? ConstantsKt.BUTTON_BLUE : ConstantsKt.BUTTON_GREY}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_43dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/yes"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/btnNo"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion"
            app:question_no_button="@{isClick ? ConstantsKt.BUTTON_GREY : ConstantsKt.BUTTON_BLUE}" />

        <TextView
            android:id="@+id/tvUpload"
            style="@style/styleTextUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:visibility="invisible"
            android:text="@string/please_upload"
            app:layout_constraintStart_toStartOf="@+id/btnNo"
            app:layout_constraintTop_toBottomOf="@+id/btnNo" />

        <ExpandableListView
            android:id="@+id/expListView"
            style="@style/styleDivider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpload" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            style="@style/styleButtonNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_43dp"
            android:layout_marginStart="@dimen/margin_50dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:text="@string/text_button_next"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expListView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>